[package]
name = "macroquad_multiplayer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# WASM-only: browser WebSocket via quad-net
[target.'cfg(target_arch = "wasm32")'.dependencies]
quad-net = "0.1"

# Native-only (server + native client)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
dotenvy = "0.15"
rand = "0.8"